--- a/get_weather.html
+++ b/get_weather.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,7 +9,7 @@
   <body>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
     <div id="weather"></div>
-    <b id='text'> Hi! </b>
+    <p id='text' style='font-family:Verdana; font-size: 200%'> Hi! </p>
     <script>
         function httpGet()
         {
@@ -24,7 +23,7 @@
             var xml = JSON.parse(xmlHttp.responseText);
             temperature = xml.list[0].main.temp;
             type = xml.list[0].weather[0].main;
-            $("#text").html("Weather in Helsinki: " + Math.round(temperature - 273.15, -2) + "°C, " + type.toLowerCase());
+            $("#text").html("Weather in Helsinki: " + Math.round(temperature - 273.15, -2) + " &deg;C, " + type.toLowerCase());
         }
         window.onload = httpGet;
     </script>
