Change text style and color

--- a/get_weather.html
+++ b/get_weather.html
@@ -6,10 +6,10 @@
         #map { height: 100%; }
       </style>
     </head>
-  <body>
+  <body style='background-color: rgb(0, 122, 201)'>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
     <div id="weather"></div>
-    <p id='text' style='font-family:Verdana; font-size: 200%'> Hi! </p>
+    <p id='text' style='font-family:Verdana; font-size: 200%; color: white'> Hi! </p>
     <script>
         function httpGet()
         {
@@ -23,7 +23,7 @@
             var xml = JSON.parse(xmlHttp.responseText);
             temperature = xml.list[0].main.temp;
             type = xml.list[0].weather[0].main;
-            $("#text").html("Weather in Helsinki: " + Math.round(temperature - 273.15, -2) + " &deg;C, " + type.toLowerCase());
+            $("#text").html("Weather in Helsinki:<br>" + Math.round(temperature - 273.15, -2) + " &deg;C, " + type.toLowerCase());
         }
         window.onload = httpGet;
     </script>
