Put text in the center

--- a/get_weather.html
+++ b/get_weather.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <style type="text/css">
-        html, body { height: 100%; margin: 0; padding: 0; }
-        #map { height: 100%; }
-      </style>
-    </head>
   <body style='background-color: rgb(0, 122, 201)'>
+    <style type="text/css">
+        html, body { height: 100%; margin: 0; padding: 100; }
+    </style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-    <div id="weather"></div>
-    <p id='text' style='font-family:Verdana; font-size: 200%; color: white'> Hi! </p>
+    <p id='text' style='font-family:Verdana; font-size: 200%; color: white; text-align: center'></p>
     <script>
         function httpGet()
         {
