Disable scrolling on the weather page

--- a/get_weather.html
+++ b/get_weather.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body style='background-color: rgb(0, 122, 201)'>
+  <body style='background-color: rgb(0, 122, 201); height: 100%; overflow: hidden'>
     <style type="text/css">
         html, body { height: 100%; margin: 0; padding: 100; }
     </style>
